[project]
name = "mcp-reddit-anon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "uvicorn",
]


[project.scripts]
mcp-reddit = "mcp_reddit.reddit_fetcher:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_reddit"]
